--- a/src/app/componentes/shared/navbar/navbar.component.html
+++ b/src/app/componentes/shared/navbar/navbar.component.html
@@ -34,12 +34,18 @@
 
     <form class="form-inline my-2 my-lg-0">
       <input
+        (keyup.enter)="buscarHeroe(buscador.value)"
         class="form-control mr-sm-2"
         type="search"
-        placeholder="Search"
+        placeholder="Buscar"
         aria-label="Search"
+        #buscador
       />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+      <button
+        (click)="buscarHeroe(buscador.value)"
+        class="btn btn-outline-success my-2 my-sm-0"
+        type="button"
+      >
         Search
       </button>
     </form>
