--- a/src/app/componentes/heroes/heroes.component.html
+++ b/src/app/componentes/heroes/heroes.component.html
@@ -2,34 +2,11 @@
 <hr />
 
 <div class="card-columns">
-  <div
-    class="card animated fadeIn fast"
-    *ngFor="let heroe of heroes; let i = index"
-  >
-    <div class="card-body">
-      <img
-        src="{{ heroe.img }}"
-        class="card-img-top"
-        alt="{{ heroe.nombre }}"
-      />
-      <h5 class="card-title">{{ heroe.nombre }}</h5>
-      <p class="card-text">
-        {{ heroe.bio }}
-      </p>
-      <p class="card-text">
-        <small class="text-muted">{{ heroe.aparicion }}</small>
-      </p>
-
-      <button
-        (click)="verHeroe(i)"
-        type="button"
-        class="btn btn-outline-primary"
-      >
-        Ver más..
-      </button>
-      <!--<a [routerLink]="['/heroe', i]" class="btn btn-outline-primary">
-        Ver mas Link...</a
-      -->
-    </div>
-  </div>
+  <!-- *ngFor="let heroe of heroes; let i = index" -->
+  <app-heroe-tarjeta
+    (heroeSelec)="verHeroe($event)"
+    [heroe]="foo"
+    [index]="i"
+    *ngFor="let foo of heroes; let i = index"
+  ></app-heroe-tarjeta>
 </div>
